--- a/home.html
+++ b/home.html
@@ -10,22 +10,25 @@
 <body>
     <header>
         <div class="navbar">
-            <div>
-                <img class="logo" src="/photos/Logo.png" alt="Logo CeciCo">
+                <img class="logoHeader" src="/photos/logoHeader.png" alt="Logo CeciCo">
+            <div class="barRight">
+                <img src="icons/icon_globe.png" alt="Icon language" width="30px">
+                <img src="icons/icon_cart.png" alt="Icon cart" width="30px">
             </div>
-            <div class="topNav">
-                <nav>
-                    <ul class="NavPages">
-                        <li id="HomePage"><a href="" >HOME</a></li>
-                        <li><a href="">ABOUT ME</a></li>
-                        <li><a href="">PRODUCTS</a></li>
-                        <li><a href="">CONTACTS</a></li>
-                        <li><a href="">ETSY SHOP</a></li>
-                        <li><a href="">LOGIN</a></li>
+            <div class="centerNav">
+                <nav >
+                    <ul class="navPages">
+                        <li id="homePage"><a href="/home.html" >HOME</a></li>
+                        <li id="aboutMe"><a href="/aboutMe.html">ABOUT ME</a></li>
+                        <li id="products"><a href="/products.html">PRODUCTS</a></li>
+                        <li id="contact"><a href="/contact.html">CONTACT</a></li>
+                        <li id="etsyShop"><a href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY SHOP</a></li>
+                        <li id="login"><a href="/login.html">LOGIN</a></li>
+                        <li id="account"><a href="/account.html"><img src="icons/icon_user.png" alt="Icon account" width="25px"></a></li>
                     </ul>    
                 </nav>
             </div>
-        </div>
+        
         </div>
     </header>
     <main>
@@ -34,23 +37,30 @@
 
 
 <footer>
-    <div class="LogoFooter">
-        <img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo">
+    <div class="logoFooter">
+        <!-- <h1>Ceci co.</h1> -->
+        <a href="#"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
     </div>
     <div class="centerFooter">
-        <div class="Networking">
-            <a href="">Instagram</a>
-            <a href="">Facebook</a>
-            <a href="">Tik Tok</a>
+        <div class="networking">
+            <a href="https://www.instagram.com/cecico.ceramics/?hl=fr"><img src="/icons/icon_insta.png" alt="Logo instagram"></a>
+            <a href="https://www.facebook.com/people/Ceci-Co/100063812362345/"><img src="/icons/icon_facebook.png" alt="Logo Facebook"></a>
+            <a href="https://www.tiktok.com/@cecico.ceramics"><img src="/icons/icon_tiktok.png" alt="Logo TikTok"></a>
         </div>
-        <div class="Mail">
+        <div class="mail">
             <p>cecicoceramics@gmail.com</p>
         </div>
     </div>
-    <div>
-        <p>Privacy Policy</p>
-        <p>Terms & Conditions</p>
-        <p>Shipping & Refund Policy</p>
+    <div class="autres">
+        <a href="/privacyPolicy.html">
+            <p>Privacy Policy</p>
+        </a>
+        <a href="/termsConditions.html">
+            <p>Terms & Conditions</p>
+        </a>
+        <a href="/shippingRefund.html">
+            <p>Shipping & Refund Policy</p>
+        </a>
     </div>
     </div>
 </footer>
