--- a/home.html
+++ b/home.html
@@ -19,12 +19,12 @@
                 <nav >
                     <ul class="navPages">
                         <li id="homePage"><a href="/home.html" >HOME</a></li>
-                        <li id="aboutMe"><a href="/aboutMe.html">ABOUT ME</a></li>
-                        <li id="products"><a href="/products.html">PRODUCTS</a></li>
-                        <li id="contact"><a href="/contact.html">CONTACT</a></li>
+                        <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
+                        <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
+                        <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
                         <li id="etsyShop"><a href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY SHOP</a></li>
-                        <li id="login"><a href="/login.html">LOGIN</a></li>
-                        <li id="account"><a href="/account.html"><img src="icons/icon_user.png" alt="Icon account" width="25px"></a></li>
+                        <li id="login"><a href="/pages/login.html">LOGIN</a></li>
+                        <li id="account"><a href="/pages/account.html"><img src="icons/icon_user.png" alt="Icon account" width="25px"></a></li>
                     </ul>    
                 </nav>
             </div>
@@ -38,9 +38,9 @@
 
 <footer>
     <div class="logoFooter">
-        <!-- <h1>Ceci co.</h1> -->
         <a href="#"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
     </div>
+
     <div class="centerFooter">
         <div class="networking">
             <a href="https://www.instagram.com/cecico.ceramics/?hl=fr"><img src="/icons/icon_insta.png" alt="Logo instagram"></a>
@@ -51,17 +51,16 @@
             <p>cecicoceramics@gmail.com</p>
         </div>
     </div>
-    <div class="autres">
-        <a href="/privacyPolicy.html">
+    <div class="footerRight">
+        <a href="/pages/privacyPolicy.html">
             <p>Privacy Policy</p>
         </a>
-        <a href="/termsConditions.html">
+        <a href="/pages/termsConditions.html">
             <p>Terms & Conditions</p>
         </a>
-        <a href="/shippingRefund.html">
+        <a href="/pages/shippingRefund.html">
             <p>Shipping & Refund Policy</p>
         </a>
-    </div>
     </div>
 </footer>
 </body>
