modif home.html and add photos

--- a/home.html
+++ b/home.html
@@ -32,10 +32,25 @@
         </div>
     </header>
     <main>
+        <!-- Future carousel -->
+<section id="carousel"> 
+    <img src="/photos/photoHome_Caroussel.jpeg" alt="photo hands Ceci" width="50%" height="500px">
+</section>
+<section id="linksCenter">
+<!-- Icons packaging, made with love and contact -->
+ <img src="/icons/eco-packaging.png" alt="">
+</section>
+<section id="photoCollection">
+    <h1>COLLECTIONS</h1>
+<div class="collectionHome">
+    <img src="/photos/photoHome_Eggs.jpeg" alt="Differents eggs plates">
+    <img src="/photos/photoHome_Faces.jpeg" alt="Differents faces plates">
+    <img src="/photos/photoHome_Flowers.jpeg" alt="Differents flowers plates">
+    <img src="/photos/photoHome_Others.jpeg" alt="Differents magnets">
+</div>
+</section>
 
     </main>
-
-
 <footer>
     <div class="logoFooter">
         <a href="#"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
