--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/styleAboutMe.css">
-    <title>About me</title>
+    <script src="https://kit.fontawesome.com/cdc160965e.js" crossorigin="anonymous"></script>
+    <title>Login</title>
 </head>
-
 <body>
     <header>
         <div class="navbar">
@@ -15,11 +14,12 @@
             <div class="barRight">
                 <img src="/icons/icon_globe.png" alt="Icon language" width="30px">
                 <img src="/icons/icon_cart.png" alt="Icon cart" width="30px">
+                <i class="fa-solid fa-bars" style="color: #E6A197;" id="hamburgerMenu"></i>
             </div>
             <div class="centerNav">
                 <nav>
                     <ul class="navPages">
-                        <li id="homePage"><a href="/home.html">HOME</a></li>
+                        <li id="homePage"><a href="/index.html">HOME</a></li>
                         <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
                         <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
                         <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
@@ -27,12 +27,11 @@
                                 href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY
                                 SHOP</a></li>
                         <li id="login"><a href="/pages/login.html">LOGIN</a></li>
-                        <li id="account"><a href="/pages/account.html"><img src="icons/icon_user.png" alt="Icon account"
-                                    width="25px"></a></li>
+                        <li id="account"><a href="/pages/account.html"><img src="/icons/icon_user.png"
+                                    alt="Icon account" width="25px"></a></li>
                     </ul>
                 </nav>
             </div>
-
         </div>
     </header>
     <main>
@@ -95,6 +94,7 @@
             </a>
         </div>
     </footer>
+    <script type="module" src="/JavaScript/main.js"></script>
 </body>
 
 </html>
