--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
             <div class="centerNav">
                 <nav>
                     <ul class="navPages">
-                        <li id="homePage"><a href="/home.html">HOME</a></li>
+                        <li id="homePage"><a href="/index.html">HOME</a></li>
                         <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
                         <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
                         <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
@@ -92,7 +92,7 @@
     <!-- Footer -->
     <footer>
         <div class="logoFooter">
-            <a href="#"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
+            <a href="/index.html"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
         </div>
 
         <div class="centerFooter">
