--- a/pages/login.html
+++ b/pages/login.html
@@ -4,29 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/styleLogin.css">
+    <script src="https://kit.fontawesome.com/cdc160965e.js" crossorigin="anonymous"></script>
     <title>Login</title>
 </head>
 <body>
     <header>
         <div class="navbar">
-                <img class="logoHeader" src="/photos/logoHeader.png" alt="Logo CeciCo">
+            <img class="logoHeader" src="/photos/logoHeader.png" alt="Logo CeciCo">
             <div class="barRight">
                 <img src="/icons/icon_globe.png" alt="Icon language" width="30px">
                 <img src="/icons/icon_cart.png" alt="Icon cart" width="30px">
+                <i class="fa-solid fa-bars" style="color: #E6A197;" id="hamburgerMenu"></i>
             </div>
             <div class="centerNav">
-                <nav >
+                <nav>
                     <ul class="navPages">
-                        <li id="homePage"><a href="/home.html" >HOME</a></li>
+                        <li id="homePage"><a href="/index.html">HOME</a></li>
                         <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
                         <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
                         <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
-                        <li id="etsyShop"><a href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY SHOP</a></li>
+                        <li id="etsyShop"><a
+                                href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY
+                                SHOP</a></li>
                         <li id="login"><a href="/pages/login.html">LOGIN</a></li>
-                        <li id="account"><a href="/pages/account.html"><img src="icons/icon_user.png" alt="Icon account" width="25px"></a></li>
-                    </ul>    
+                        <li id="account"><a href="/pages/account.html"><img src="/icons/icon_user.png"
+                                    alt="Icon account" width="25px"></a></li>
+                    </ul>
                 </nav>
             </div>
-        
         </div>
     </header>
+    <main>
+        <article>
+            <section>
+                <div id="loginForm">
+                    <div id="titleLogin">
+                        <h2>LOGIN</h2>
+                        <div class="pinkLine"></div>
+                    </div>
+                    <p>Please fill in the information below:</p>
+                    <form>
+                        <input type="mail" id="mail" pattern="^[a-z0-9._-]+@[a-z0-9._-]+\.[a-z]{2,6}$" minlength="8"
+                            maxlength="30" placeholder="Mail" autofocus required>
+                        <input type="text" id="password" placeholder="Password" required>
+                        <div class="forgotpsw">
+                            <a href="#">forgot password?</a>
+                        </div>
+                        <div class="divButton">
+                            <input class="button" type="submit" value="LOGIN">
+                        </div>
+                    </form>
+                </div>
+            </section>
+            <section>
+                <div id="registerForm">
+                    <div id="titleRegister">
+                        <h2>REGISTER</h2>
+                        <div class="pinkLine"></div>
+                    </div>
+                    <p>Please enter your mail and password:</p>
+                    <form>
+                        <input type="text" id="firtsName" placeholder="First name" required>
+                        <input type="text" id="lastName" placeholder="Last name" required>
+                        <input type="mail" id="mail" pattern="^[a-z0-9._-]+@[a-z0-9._-]+\.[a-z]{2,6}$" minlength="8"
+                            maxlength="30" placeholder="Mail" autofocus required>
+                        <input type="text" id="password" placeholder="Password" required>
+                        <input type="text" id="confirmPassword" placeholder="Confirm password" required>
+                        <div class="divButton">
+                            <input class="button" type="submit" value="Create my account">
+                        </div>
+                    </form>
+                </div>
+            </section>
+        </article>
+    </main>
+    <footer>
+        <div class="logoFooter">
+            <a href="/index.html"><img src="/photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
+        </div>
+
+        <div class="centerFooter">
+            <div class="networking">
+                <a href="https://www.instagram.com/cecico.ceramics/?hl=fr"><img src="/icons/icon_insta.png"
+                        alt="Logo instagram"></a>
+                <a href="https://www.facebook.com/people/Ceci-Co/100063812362345/"><img src="/icons/icon_facebook.png"
+                        alt="Logo Facebook"></a>
+                <a href="https://www.tiktok.com/@cecico.ceramics"><img src="/icons/icon_tiktok.png"
+                        alt="Logo TikTok"></a>
+            </div>
+            <div class="mail">
+                <p>cecicoceramics@gmail.com</p>
+            </div>
+        </div>
+        <div class="footerRight">
+            <a href="/pages/privacyPolicy.html">
+                <p>Privacy Policy</p>
+            </a>
+            <a href="/pages/termsConditions.html">
+                <p>Terms & Conditions</p>
+            </a>
+            <a href="/pages/shippingRefund.html">
+                <p>Shipping & Refund Policy</p>
+            </a>
+        </div>
+    </footer>
+    <script type="module" src="/JavaScript/main.js"></script>
+</body>
+
+</html>
