--- a/pages/products.html
+++ b/pages/products.html
@@ -17,7 +17,7 @@
             <div class="centerNav">
                 <nav >
                     <ul class="navPages">
-                        <li id="homePage"><a href="/home.html" >HOME</a></li>
+                        <li id="homePage"><a href="/index.html" >HOME</a></li>
                         <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
                         <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
                         <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
