carousel.js file creation

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         </div>
     </footer>
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./JavaScript/carousel.js"></script>
 </body>
 
 </html>
