carousel page About Me

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </div>
         </div>
     </header>
+
     <main>
-    <!--  carousel -->
+        
+<!--  carousel -->
         <section id="carousel" aria-label="Website Content Carousel">
             <div class="slides">
                 <img src="./photos/photo_carousel_1.png" alt="Collections Slide Picture">
@@ -61,8 +63,9 @@
                 <div class="dot"></div>
             </div>
         </section>
+
+<!-- Icons packaging, made with love and contact -->
         <section id="linksCenter">
-            <!-- Icons packaging, made with love and contact -->
             <div class="iconCenter">
                 <a href="#"><img src="./icons/iconPackaging.svg" alt="Responsible packaging and with love Icon"
                         width="150px">
@@ -82,6 +85,8 @@
                 </a>
             </div>
         </section>
+
+<!-- Collections Photos -->
         <section id="photoCollection">
             <h1><a href="./pages/products.html">COLLECTIONS</a></h1>
             <div class="collection">
@@ -99,8 +104,9 @@
                 </div>
 
             </div>
-
     </main>
+
+    <!-- Footer -->
     <footer aria-label="Website Footer">
         <div class="logoFooter">
             <a href="./index.html"><img src="./photos/LogoFooter.png" alt="Logo W&B CeciCo"></a>
