--- a/pages/contact.html
+++ b/pages/contact.html
@@ -120,7 +120,7 @@
             </a>
         </div>
     </footer>
-    <script type="module" src="/JavaScript/main.js"></script>
+    <script type="module" src="../main.js"></script>
     <script type="module" src="/JavaScript/forms.js"></script>
 </body>
 
