--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/styleAboutMe.css">
+    <meta name="description"
+        content="Handmade ceramic pieces, crafted with love and delivered to your home. Shop unique, personalized pieces on our Etsy store.">
+    <link rel="stylesheet" href="../style/styleAboutMe.css">
     <script src="https://kit.fontawesome.com/cdc160965e.js" crossorigin="anonymous"></script>
-    <title>Login</title>
+    <title>CeciCo Ceramics: Handmade Pieces, Where Art Meets Heart</title>
 </head>
+
 <body>
     <header>
-        <div class="navbar">
-            <img class="logoHeader" src="/photos/logoHeader.png" alt="Logo CeciCo">
-            <div class="barRight">
-                <img src="/icons/icon_globe.png" alt="Icon language" width="30px">
-                <img src="/icons/icon_cart.png" alt="Icon cart" width="30px">
-                <i class="fa-solid fa-bars" style="color: #E6A197;" id="hamburgerMenu"></i>
-            </div>
-            <div class="centerNav">
-                <nav>
+        <nav aria-label="Main Navigation">
+            <div class="navbar">
+                <a href="../index.html"><img class="logoHeader" src="../photos/logoHeader.png" alt="Logo CeciCo"></a>
+                <div class="barRight">
+                    <img src="../icons/icon_globe.png" alt="Icon language" width="30px">
+                    <img src="../icons/icon_cart.png" alt="Icon cart" width="30px">
+                    <i class="fa-solid fa-bars" style="color: #E6A197;" id="hamburgerMenu"></i>
+                </div>
+                <div class="centerNav">
                     <ul class="navPages">
-                        <li id="homePage"><a href="/index.html">HOME</a></li>
-                        <li id="aboutMe"><a href="/pages/aboutMe.html">ABOUT ME</a></li>
-                        <li id="products"><a href="/pages/products.html">PRODUCTS</a></li>
-                        <li id="contact"><a href="/pages/contact.html">CONTACT</a></li>
+                        <li id="homePage"><a href="../index.html">HOME</a></li>
+                        <li id="aboutMe"><a href="./aboutMe.html">ABOUT ME</a></li>
+                        <li id="products"><a href="./products.html">PRODUCTS</a></li>
+                        <li id="contact"><a href="./contact.html">CONTACT</a></li>
                         <li id="etsyShop"><a
                                 href="https://www.etsy.com/fr/shop/CecicoCeramics?ref=l2-about-shopname&from_page=listing">ETSY
                                 SHOP</a></li>
-                        <li id="login"><a href="/pages/login.html">LOGIN</a></li>
-                        <li id="account"><a href="/pages/account.html"><img src="/icons/icon_user.png"
+                        <li id="login"><a href="./login.html">LOGIN</a></li>
+                        <li id="account"><a href="./account.html"><img src="../icons/icon_user.png"
                                     alt="Icon account" width="25px"></a></li>
                     </ul>
-                </nav>
-            </div>
+        </nav>
+        </div>
         </div>
     </header>
     <main>
@@ -49,7 +53,28 @@
         </section>
         <section >
             <div id="aboutPieces">
-                <img src="/photos/uniquePieces.jpeg" alt="Photo of workplace">
+                <div id="carousel" aria-label="About me Carousel">
+                    <div class="slides">
+                        <img src="../photos/photo_carouselAbout_1.jpeg" alt="Little mushroom ceramic piece">
+                    </div>
+                    <div class="slides">
+                        <img src="../photos/photo_carouselAbout_2.jpeg" alt="Making Off ceramics dishes">
+                    </div>
+                    <div class="slides">
+                        <img src="../photos/photo_carouselAbout_3.jpeg" alt="Making Off ceramics cups">
+                    </div>
+                    <div class="slides">
+                        <img src="../photos/photo_carouselAbout_4.jpeg" alt="Ceci working with ceramic">
+                    </div>
+                    <div class="leftArrow"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="rightArrow"><i class="fa-solid fa-angle-right"></i></div>
+                    <div id="dots-slides">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
+                </div>
                 <div class="piecesText">
                 <h1>Unique pieces</h1>
                 <p>The uniqueness of the handmade, further elevates the value of each piece.Made with dedication and
@@ -94,7 +119,8 @@
             </a>
         </div>
     </footer>
-    <script type="module" src="/JavaScript/main.js"></script>
+    <script type="module" src="../main.js"></script>
+    <script type="module" src="/JavaScript/carousel.js"></script>
 </body>
 
 </html>
